--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
   box-sizing: border-box !important;
-  background-color: #fafafa !important;
+  background-color: #faedcd !important;
+  font-family: Open Sans  !important;
 }
